docs: atualiza documentação técnica e configurações de segurança (CORS/JWT)